--- a/birthday.html
+++ b/birthday.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 <body>
-    <video id="background-video" autoplay loop muted src="images/tulip2.mp4" ></video>
+    <video id="background-video" autoplay loop muted src="images/Tulip2.mp4" ></video>
   <h2>a7kmiha w aft7iha chghol ktab 👀❤</h2>
   <div class="body">
     <div class="birthdayCard">
@@ -50,4 +50,5 @@
 
 
 </body>
+
 </html>
