--- a/birthday.html
+++ b/birthday.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <title>Sweetheart's Birthday</title>
-        <link rel="icon" type="image/png" href="images/cake.jpg">
+        <link rel="icon" type="image/png" href="images/favicons.png">
         <link rel="stylesheet" href="birthday.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -52,3 +52,4 @@
 </body>
 
 </html>
+
