--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <title>Sweetheart's Birthday</title>
-        <link rel="icon" type="image/png" href="images/cake.jpg">
+        <link rel="icon" type="image/png" href="images/favicons.png">
         <link rel="stylesheet" href="lwla.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -19,4 +19,5 @@
              <h3 class="Yes">Awah lala yakhu</h3>
             </a>  </button> 
     <script src="lwla.js"></script>
+
         </body>
